# Tabula-AI

./: .dockerignore  .gitignore  Dockerfile.noteDev  Dockerfile.noteProd  Dockerfile.resultDev  Dockerfile.resultProd  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: -ai--버그-템플릿.md  -ai--이슈-템플릿.md
.github/workflows/: workflow-noteDev.yaml  workflow-resultDev.yaml
code/kiwi/: (example)pipeline.py  LLM_interaction.py  OCR_Processor.py  config.py  core.py  input_handler.py  intigration_test.ipynb  intigration_test.py  requirements.txt  visualizer.py
code/sebi/: find_missing.py  pinecone_upload.py  rag_correction.py  requirements.txt
code/sebi/prompts/: correction_prompt.txt  missing_prompt.txt  prompt.txt
libs/common-sdk/: pyproject.toml
libs/common-sdk/common_sdk/: __init__.py  config.py  constants.py  get_logger.py  prompt_loader.py  sse.py  trace.py  utils.py
libs/common-sdk/common_sdk/auth/: __init__.py  decoded_token.py
libs/common-sdk/common_sdk/conn/: mongodb.py  s3.py
libs/common-sdk/common_sdk/crud/: __init__.py  mongodb.py  s3.py
libs/common-sdk/common_sdk/exceptions/: __init__.py  businees_exception.py  handler.py  server_exception.py
libs/common-sdk/common_sdk/prompts/: GRADING-PROMPT.yaml  IMAGE-USER-PROMPT.yaml  KEYWORD-PROMPT.yaml  MISSING-PROMPT.yaml  OCR-PROMPT.yaml
libs/common-sdk/common_sdk/swagger/: __init__.py  auth.py  response_config.py
libs/common-sdk/tests/: test_auth.py  test_connect_mongo.py  test_connect_s3.py  test_connection.py  test_embedding.py
libs/note-sdk/: pyproject.toml
libs/note-sdk/note_sdk/: __init__.py  config.py
libs/note-sdk/note_sdk/image_processor/: __init__.py  api_image_processor.py
libs/note-sdk/note_sdk/keyword/: __init__.py  api_keyword.py
libs/note-sdk/note_sdk/llm/: __init__.py  messages.py  models.py
libs/note-sdk/note_sdk/parsing/: __init__.py  api_parsing.py  base.py  element.py  export.py  extractor.py  parser.py  preprocessing.py  state.py  upstage.py  utils.py
libs/note-sdk/note_sdk/vector_store/: __init__.py  api_vector_store.py
libs/note-sdk/tests/: test_note_service.py
libs/result-sdk/: pyproject.toml
libs/result-sdk/result_sdk/: __init__.py  config.py
libs/result-sdk/result_sdk/grading/: __init__.py  find_missing.py  grader.py  models.py  nodes.py  rag_correction.py  workflow.py
libs/result-sdk/result_sdk/missing/: __init__.py  missing_analyzer.py  nodes.py  processor.py  workflow.py
libs/result-sdk/result_sdk/output_visualization/: __init__.py  visualizer.py
libs/result-sdk/result_sdk/result_processor/: HandWriting_detect.py  Prompt.py
libs/result-sdk/result_sdk/retrieval/: __init__.py  models.py  search.py
libs/result-sdk/result_sdk/text_processing/: LLM_interaction.py  OCR_Block_Test.py  OCR_Processor.py  __init__.py  core.py  input_handler.py
libs/result-sdk/tests/: test_accuracy.py  test_grading.py  test_missing.py  test_output_visualization.py  test_search.py  test_text_processing.py
parse/: fastapi_app.py  pyproject.toml  router.py
parse/core/: logging.py  messages.py
parse/generate/: extract_keyword.py  object_summary.py
parse/layoutparse/: base.py  export.py  extractor.py  parser.py  parsing.py  preprocessing.py  state.py  upstage.py  utils.py
parse/load/: utils.py  vector_load.py
parse/logs/: get_logger.py
parse/path/: config.py
parse/result/keyword/: hadoop_mindmap.json
parse/result/md/: hadoop.md
parse/result/tables/hadoop/: table_23.csv
services/note-service/: pyproject.toml
services/note-service/note_service/: main.py  router.py  service.py
services/result-service/: pyproject.toml
services/result-service/result_service/: main.py  router.py  service.py
services/result-service/result_service/models/: response.py
services/result-service/tests/: test_service.py
