[tool.poetry]
name = "tabula-common-sdk"
version = "1.0.0"
description = "Common SDK for environment configuration and utility functions"
packages = [
    { include = "common_sdk" }
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"