[tool.poetry]
name = "tabula-note-sdk"
version = "1.0.0"
description = "An SDK that processes user-uploaded learning materials"
packages = [
    { include = "note_sdk" }
]

[tool.poetry.dependencies]
python = "^3.11"
tabula-common-sdk = { path = "../../libs/common-sdk", develop = true }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"