[tool.poetry]
name = "tabula-result-sdk"
version = "1.0.0"
description = "An SDK for grading based on user-uploaded learning outcomes"
packages = [
    { include = "result_sdk" }
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"