[project]
name = "tabula-note-sdk"
version = "1.0.0"
description = "Result Service API for processing result data (OCR, grading) and providing feedback"


[tool.poetry.dependencies]
python = "^3.11"
common-sdk = { path = "../../libs/common-sdk", develop = true }
result-sdk = { path = "../../libs/result-sdk", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

