[tool.poetry]
name = "tabula-result-service"
version = "1.0.0"
description = "Result Service API for processing result data (OCR, grading) and providing feedback"
packages = [
    { include = "result_service" }
]

[tool.poetry.dependencies]
python = "^3.11"
tabula-common-sdk = { path = "../../libs/common-sdk", develop = true }
tabula-result-sdk = { path = "../../libs/result-sdk", develop = true }
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
pymupdf = "^1.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

